[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftblade"
version = "1.1.0"
description = "High-performance Laravel Blade-inspired template engine for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["template", "engine", "blade", "laravel", "templating", "html", "swift", "fast"]
authors = [
    {name = "SwiftBlade Contributors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Sapistudio/swiftblade.git"
Documentation = "https://github.com/Sapistudio/swiftblade/blob/main/AUDIT_REPORT.md"
Repository = "https://github.com/Sapistudio/swiftblade"
"Bug Tracker" = "https://github.com/Sapistudio/swiftblade/issues"

[tool.setuptools]
packages = ["swiftblade", "swiftblade.cache", "swiftblade.handlers", "swiftblade.handlers.control", "swiftblade.utils"]

[tool.setuptools.package-data]
swiftblade = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --cov=blade --cov-report=term-missing"
